fix overflow on todoTab

--- a/src/components/todo/todo.css
+++ b/src/components/todo/todo.css
@@ -3,8 +3,9 @@
 
   display: grid;
   grid-template-columns: 350px 350px;
+  grid-template-rows: 80%;
   gap: 2rem;
-  overflow: auto;
+  overflow-x: auto;
 }
 
 .todoTab,
@@ -15,6 +16,7 @@
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   height: min-content;
+  max-height: 100%;
 
   display: flex;
   flex-direction: column;
@@ -33,6 +35,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+  overflow-y: auto;
 }
 
 .todoBox {
@@ -194,7 +197,7 @@
     grid-template-columns: 100% 100%;
     padding: 25px;
     gap: 10px;
-    overflow: auto;
+    overflow-x: auto;
     grid-auto-flow: row;
   }
 
